# spycekit

./: README.md  pyproject.toml  requirements.txt
ipynb/: demo.ipynb
spycekit/: __init__.py  main.py
