[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spycekit"
authors = [
    {name="Sam Wolk", email="wolk.sam@gmail.com"}
]
description = "Version and manage design spaces with the power of Pydantic"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]


[tool.setuptools.dependencies]
install_requires = [
  "numpy",
  "pydantic>=2",
  "pandas",
  "pandera",
]
extras_require = { "dev" = ["black", "isort", "pytest"] }

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.setuptools.metadata]
keywords = ["data science", "machine learning", "design space exploration", "design of experiments"]
