[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spycekit"
authors = [
    {name="Sam Wolk", email="wolk.sam@gmail.com"}
]
description = "Version and manage design spaces with the power of Pydantic"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version"]
keywords = ["data science", "machine learning", "design space exploration", "design of experiments"]

[project.urls]
Documentation = "https://github.comm/szvsw/spycekit"
Repository = "https://github.comm/szvsw/spycekit"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"
